# kubevirt

./: build
cmd/example-hook-sidecar/: smbios.go
cmd/virt-handler/: BUILD.bazel  virt-handler.go
cmd/virt-launcher/: BUILD.bazel  virt-launcher.go
pkg/handler-launcher-com/notify/v1/: notify.pb.go  notify.proto
pkg/monitoring/lifecycle_metrics/aggregator/: BUILD.bazel  aggregator.go
pkg/monitoring/lifecycle_metrics/prometheus/: BUILD.bazel  prometheus.go
pkg/virt-handler/: vm.go
pkg/virt-handler/cmd-client/: client.go
pkg/virt-handler/notify-server/: BUILD.bazel  server.go
pkg/virt-launcher/: BUILD.bazel  monitor.go  monitor_test.go
pkg/virt-launcher/metric-store/: BUILD.bazel  common_metrics.go  metric_store.go  metric_store_suite_test.go  metric_store_test.go
pkg/virt-launcher/metric-store/metric-expo/: BUILD.bazel  metric_exporter.go
pkg/virt-launcher/notify-client/: BUILD.bazel  client.go  notify_test.go
pkg/virt-launcher/trace-store/: BUILD.bazel  trace_store.go
pkg/virt-launcher/trace-store/metric-expo/: BUILD.bazel  metric_exporter.go
pkg/virt-launcher/virtwrap/: BUILD.bazel  manager.go  manager_test.go
pkg/virt-launcher/virtwrap/cmd-server/: BUILD.bazel  server.go  server_test.go
