load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "metric_store.go",
        "common_metrics.go",
    ],
    importpath = "kubevirt.io/kubevirt/pkg/virt-launcher/metric-store",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/virt-launcher/metric-store/metric-expo:go_default_library",
    ],
)