load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["trace_store.go"],
    importpath = "kubevirt.io/kubevirt/pkg/virt-launcher/trace-store",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/virt-launcher/trace-store/metric-expo:go_default_library",
        "//staging/src/kubevirt.io/client-go/log:go_default_library",
    ],
)
